支持linux下shell命令